@@ -11,6 +11,7 @@ Version 1.7.6+svn:
    * Enabled the new event handler by default now
  * WML engine:
    * Added 'side Y turn' and 'side Y turn X' events
+   * Allow markup in a campaign description (bug #14435)
  * Miscellaneous and bugfixes:
    * Add-ons download list now takes filtering into account for
      displaying descriptions
